deploy: b60f17d3a36c5de319aa3d22249b569432430b10

--- a/index.html
+++ b/index.html
@@ -10855,8 +10855,8 @@ When changing a user's username, their token will be regenerated.
 <td>Success</td>
 </tr>
 <tr>
-<td>500</td>
-<td>Internal Server Error</td>
+<td>400</td>
+<td>Bad Request</td>
 <td>The provided array must have a non-zero length.</td>
 </tr>
 </tbody></table>
