--- a/index.html
+++ b/index.html
@@ -10813,8 +10813,8 @@ When changing a user's username, their token will be regenerated.
 <tr>
 <td><code>progress</code></td>
 <td>Float</td>
-<td><code>0</code></td>
-<td>The percentage completion progress of the media. Should be <code>1</code> if the media is finished.</td>
+<td><code>0</code> or <code>1</code></td>
+<td>The percentage completion progress of the media. Will automatically be set to <code>1</code> if the media is finished.</td>
 </tr>
 <tr>
 <td><code>currentTime</code></td>
@@ -10905,8 +10905,8 @@ When changing a user's username, their token will be regenerated.
 <tr>
 <td><code>progress</code></td>
 <td>Float</td>
-<td><code>0</code></td>
-<td>The percentage completion progress of the media. Should be <code>1</code> if the media is finished.</td>
+<td><code>0</code> or <code>1</code></td>
+<td>The percentage completion progress of the media. Will automatically be set to <code>1</code> if the media is finished.</td>
 </tr>
 <tr>
 <td><code>currentTime</code></td>
