--- a/index.html
+++ b/index.html
@@ -10840,6 +10840,18 @@ When changing a user's username, their token will be regenerated.
 <td><code>Date.now()</code></td>
 <td>The time (in ms since POSIX epoch) when the media progress was last updated.</td>
 </tr>
+<tr>
+<td><code>finishedAt</code></td>
+<td>Integer</td>
+<td><code>Date.now()</code></td>
+<td>The time (in ms since POSIX epoch) when the user finished the media.</td>
+</tr>
+<tr>
+<td><code>startedAt</code></td>
+<td>Integer</td>
+<td><code>finishedAt</code></td>
+<td>The time (in ms since POSIX epoch) when the user started consuming the media.</td>
+</tr>
 </tbody></table>
 <h3 id='response-5'>Response</h3>
 <table><thead>
@@ -10931,6 +10943,18 @@ When changing a user's username, their token will be regenerated.
 <td>Integer</td>
 <td><code>Date.now()</code></td>
 <td>The time (in ms since POSIX epoch) when the media progress was last updated.</td>
+</tr>
+<tr>
+<td><code>finishedAt</code></td>
+<td>Integer</td>
+<td><code>Date.now()</code></td>
+<td>The time (in ms since POSIX epoch) when the user finished the media.</td>
+</tr>
+<tr>
+<td><code>startedAt</code></td>
+<td>Integer</td>
+<td><code>finishedAt</code></td>
+<td>The time (in ms since POSIX epoch) when the user started consuming the media.</td>
 </tr>
 </tbody></table>
 <h3 id='response-6'>Response</h3>
