deploy: 0b394c4944003a3cab00640ee6f5d5f9921201c4

--- a/index.html
+++ b/index.html
@@ -1092,9 +1092,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
-<p>Audiobookshelf API and this documentation is a work in progress.</p>
-
-<p>Contributions to this documentation are welcome! <a href="https://github.com/advplyr/audiobookshelf-slate">View API docs GitHub repo</a></p>
+<aside class="warning">These API docs are out-of-date and are no longer maintained. We hope to implement automated OpenAPI docs in the future.</aside>
 <h1 id='authentication'>Authentication</h1>
 <p>Audiobookshelf uses a users API token as a Bearer token for requests. For GET requests the API token can optionally be passed in as a query string.</p>
 
